device orientation for selfie / classifier continued

--- a/app/src/main/res/layout/activity_identity_camera.xml
+++ b/app/src/main/res/layout/activity_identity_camera.xml
@@ -88,6 +88,7 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/identityCameraInfoText"
                     app:layout_constraintEnd_toStartOf="@+id/cameraInfoVerticalGuidelineRight"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="@+id/cameraInfoVerticalGuidelineLeft"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/kyc_identity_front" />
@@ -96,36 +97,17 @@
                     android:id="@+id/identityCameraInfoText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:fontFamily="@font/sf_ui_display_thin"
                     android:gravity="center"
                     android:text="@string/identityCameraInfoFrontText"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toTopOf="@+id/identityCameraInfoOKButton"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/identityCameraInfoImage" />
-
-                <Button
-                    android:id="@+id/identityCameraInfoOKButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@null"
-                    android:fontFamily="@font/sf_ui_display_semibold"
-                    android:text="@string/identityCameraInfoFrontOK"
-                    android:textAllCaps="false"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/identityCameraInfoText" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/cameraInfoVerticalGuidelineLeft"
@@ -140,6 +122,19 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.90" />
+
+                <TextView
+                    android:id="@+id/identityCameraWarningText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"
+                    android:textColor="@android:color/holo_purple"
+                    android:textSize="30sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.constraint.ConstraintLayout>
