--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,7 @@
         android:text="M"
         android:textColor="@android:color/white"
         android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/titleSecondTextView"
         app:layout_constraintHorizontal_bias="0.5"
@@ -134,6 +135,7 @@
         android:text="-OnBoarding"
         android:textColor="@android:color/white"
         android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/titleFirstTextView"
