--- a/app/src/main/res/layout/activity_identity_camera.xml
+++ b/app/src/main/res/layout/activity_identity_camera.xml
@@ -109,6 +109,23 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/identityCameraInfoImage" />
 
+                <TextView
+                    android:id="@+id/speechRecognitionText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/sf_ui_display_thin"
+                    android:gravity="center"
+                    android:visibility="invisible"
+                    android:text="@string/speechRecognitionText"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/identityCameraInfoImage" />
+
                 <android.support.constraint.Guideline
                     android:id="@+id/cameraInfoVerticalGuidelineLeft"
                     android:layout_width="wrap_content"
