--- a/app/src/main/res/layout/activity_identity_result.xml
+++ b/app/src/main/res/layout/activity_identity_result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/identityResultBackground"
+    android:background="@drawable/kyc_background"
     tools:context="com.valensas.kyc_android.identityresult.IdentityResultActivity">
 
     <Button
@@ -91,8 +91,7 @@
                 android:id="@+id/identityResultSelfiePercentageMatchingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/sf_ui_display_ultralight"
+                android:fontFamily="@font/sf_ui_display_light"
                 android:text="%95"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -120,7 +119,7 @@
         android:id="@+id/identityResultNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/sf_ui_display_regular"
         android:text="@string/identityResultName"
@@ -133,20 +132,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/sf_ui_display_ultralight"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/identityResultHorizontalGuidelineThree"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/identityResultNameTitle"
         tools:text="Zahit" />
 
     <View
+        android:id="@+id/identityResultNameLine"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:background="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,7 +159,7 @@
         android:id="@+id/identityResultSurnameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/sf_ui_display_regular"
         android:text="@string/identityResultSurname"
@@ -171,20 +172,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/sf_ui_display_ultralight"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/identityResultHorizontalGuidelineFour"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/identityResultSurnameTitle"
         tools:text="Başyiğit" />
 
     <View
+        android:id="@+id/identityResultSurnameLine"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:background="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +199,7 @@
         android:id="@+id/identityResultBirthdateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/sf_ui_display_regular"
         android:text="@string/identityResultBirthdate"
@@ -209,20 +212,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/sf_ui_display_ultralight"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/identityResultHorizontalGuidelineFive"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/identityResultBirthdateTitle"
         tools:text="12.11.1996" />
 
     <View
+        android:id="@+id/identityResultBirthdateLine"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:background="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +238,7 @@
         android:id="@+id/identityResultTCKNTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/sf_ui_display_regular"
         android:text="@string/identityResultTCKN"
@@ -246,10 +251,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/sf_ui_display_ultralight"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/identityResultHorizontalGuidelineSix"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -257,11 +263,11 @@
         tools:text="36049905174" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/identityResultTCKNLine"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:background="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -321,7 +327,7 @@
                 android:id="@+id/identityResultSigniturePercentageMatchingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/sf_ui_display_ultralight"
+                android:fontFamily="@font/sf_ui_display_light"
                 android:text="%89"
                 android:textColor="@color/white"
                 android:textSize="24sp"
