--- a/app/src/main/res/layout/activity_identity_signiture.xml
+++ b/app/src/main/res/layout/activity_identity_signiture.xml
@@ -66,7 +66,7 @@
             app:layout_constraintStart_toStartOf="@+id/spinnerLeftGuideline"
             app:layout_constraintTop_toTopOf="@+id/spinnerTopGuideline"
             app:lottie_autoPlay="true"
-            app:lottie_fileName="dna_like_loader.json"
+            app:lottie_fileName="dna_like_loader_white.json"
             app:lottie_loop="true" />
 
         <android.support.constraint.Guideline
